# LabXtract

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
excel_lab_parser/: conftest.py  reqirements.txt
excel_lab_parser/data/input/: Джевелс Блю 25.04.2005.xlsx  Эльза Джинн 13.01.2010.xlsx
excel_lab_parser/src/: main.py
excel_lab_parser/src/exporters/: csv_exporter.py
excel_lab_parser/src/models/: analysis.py  patient.py  result.py
excel_lab_parser/src/parsers/: excel_parser.py  filename_parser.py
excel_lab_parser/src/processors/: normalizer.py  result_factory.py
excel_lab_parser/tests/: test_result_factory.py
labxtract/: __init__.py  cli.py
labxtract/config/: sources.yaml
labxtract/core/: __init__.py  extractor.py  models.py  normalizer.py  validator.py
labxtract/parsers/: __init__.py  excel_parser.py  sheet_detector.py  table_finder.py
labxtract/utils/: file_renamer.py
